syntax = "proto2";

package com.linbit.linstor.proto.common;

message ApiCallResponse
{
    // return code (see consts.json)
    required uint64 ret_code = 1;

    // object references
    map<string, string> obj_refs = 2;

    required string message = 3;
    optional string cause = 4;
    optional string correction = 5;
    optional string details = 6;
    repeated string error_report_ids = 7;
}
