syntax = "proto3";

package com.linbit.linstor.proto.javainternal.s2c;

import "common/ApiCallResponse.proto";
import "common/LayerType.proto";
import "common/ProviderType.proto";
import "common/Property.proto";
import "common/ExternalTools.proto";
import "common/StltConfig.proto";

// Internal response for an attempt of authentication from the controller
message MsgIntAuthResponse
{
    bool    success = 1;

    // at least one response will be added 
    repeated common.ApiCallResponse responses = 2;
    
    
    // the next fields are only set if 'success' is true, otherwise are empty / default value
    
    // The next expected full sync id
    sint64 expected_full_sync_id = 3;

    uint32 linstor_version_major = 4;
    uint32 linstor_version_minor = 5;
    uint32 linstor_version_patch = 6;

    repeated common.LayerType supported_layer = 7 [deprecated = true];
    repeated common.ProviderType supported_provider = 8 [deprecated = true];

    string node_uname = 9;

    repeated common.ExternalToolsInfo ext_tools_info = 10;
    common.StltConfig stltConfig = 11;

    repeated common.Property properties = 12;
}
